refactor: clean up controllers — fix NPE guards and simplify code
- AuditTrailAspect: add null guard for joinPoint.getArgs() return
- CommunityController: add null-safe fallback for pageQuery.size() and totalCount
- PatientRecordController: replace Iterator with for-each on ObjectNode, simplify parseDouble/parseLong
- ClinicalController: reorder imports, remove unused Objects import
- IdentityResponseAssembler: remove unused Collectors import
- AuditQueryController: simplify page-size clamp with Math.min
- OpenApiConfig: simplify buildDescription with string concatenation
- AuditLog: fix comment format